src/objects/LAC_Farmer_Details__c.object
<CustomObject>
    <description>Custom fields for LAC farmers</description>
    <fields>
        <fullName>Agrochemical_Warehouse__c</fullName>
        <label>Agrochemical Warehouse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Income_From_Wages__c</fullName>
        <label>Annual Income From Wages</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Income_from_Crop_Production__c</fullName>
        <label>Annual Income from Crop Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Income_from__c</fullName>
        <label>Annual Income from Farm Work</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_of_Coffee_Crop__c</fullName>
        <label>Area of Coffee Crop</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPA__c</fullName>
        <label>BPA</label>
        <picklist>
            <picklistValues>
                <fullName>Almácigo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fertilización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control de plagas y enfermedades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservación de suelos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Beneficio_h_medo__c</fullName>
        <label>Beneficio húmedo</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Best_Practices__c</fullName>
        <label>Best Practices</label>
        <picklist>
            <picklistValues>
                <fullName>Seedbed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shadow management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pruning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fertilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plagues and Diseases control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plantation Age</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Bodega_agroinsumos__c</fullName>
        <label>Bodega agroinsumos</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bodega_cosecha__c</fullName>
        <label>Bodega cosecha</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cell_Phone_Number__c</fullName>
        <label>Cell Phone Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificado__c</fullName>
        <label>Certificado</label>
        <picklist>
            <picklistValues>
                <fullName>Comercion Justo (FLO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orgánico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Certification_In_Progress__c</fullName>
        <label>Certification In Progress</label>
        <picklist>
            <picklistValues>
                <fullName>Fairtrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Certification_Obtained__c</fullName>
        <label>Certification Obtained</label>
        <picklist>
            <picklistValues>
                <fullName>Fair Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Certification_Score__c</fullName>
        <label>Certification Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commercial_Crops__c</fullName>
        <label>Commercial Crops</label>
        <picklist>
            <picklistValues>
                <fullName>Banana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horticulture</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conservaci_n_de_suelo__c</fullName>
        <label>Conservación de suelo</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LAC Farmer Details</relationshipLabel>
        <relationshipName>LAC_Farmer_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Control_de_enfermedades__c</fullName>
        <label>Control de enfermedades</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Control_de_plagas__c</fullName>
        <label>Control de plagas</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cooperative__c</fullName>
        <label>Cooperative</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Received__c</fullName>
        <label>Credit Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crop_Warehouse__c</fullName>
        <label>Crop Warehouse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diseases__c</fullName>
        <label>Diseases</label>
        <picklist>
            <picklistValues>
                <fullName>Muerte Recurrente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mancha de Hierro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volcamiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal Rosado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ojo de gallo o Gotera</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edad__c</fullName>
        <formula>Contact__r.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>Deprecated. Moved to HH</description>
        <label>Education (Deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>Ninguna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secundaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Empleado en una empresa por horas o tiempo parcial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asalariado en una empresa por tiempo completo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independiente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornalero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desempleado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enfermedades__c</fullName>
        <label>Enfermedades</label>
        <picklist>
            <picklistValues>
                <fullName>Roya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mancha de hierro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal rosado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muerte recurrente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguna</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entrance_Into_Programme__c</fullName>
        <label>Entrance Into Programme</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Mestizo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AfroColombiano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indigena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blanco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Members__c</fullName>
        <label>Family Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Farm_Area__c</fullName>
        <label>Farm Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Farm_Code__c</fullName>
        <label>Farm Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_has_Management_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Farm has Management Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Farmer_Code__c</fullName>
        <label>Farmer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farmer_Cooperative__c</fullName>
        <description>The name of the cooperative associated with the farmer</description>
        <label>Farmer Cooperative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fertilizacion__c</fullName>
        <label>Fertilizacion</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fertilization__c</fullName>
        <label>Fertilization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Access_Source__c</fullName>
        <label>Financial Access Source</label>
        <picklist>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Access__c</fullName>
        <description>Used to determine whether a farmer has access to finance.</description>
        <label>Financial Access</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_Security_Crops__c</fullName>
        <label>Food Security Crops</label>
        <picklist>
            <picklistValues>
                <fullName>Banana</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Food_Security_Status__c</fullName>
        <label>Food Security Status</label>
        <picklist>
            <picklistValues>
                <fullName>Secure</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unsecure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fuente_de_financiaci_n__c</fullName>
        <label>Fuente de financiación</label>
        <picklist>
            <picklistValues>
                <fullName>Cooperativa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Familiares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguna</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>We have a gender field here because the options in LAC surveys are in Spanish and IBT doesn&apos;t yet (v 2.22 and earlier) support different labels and values for options</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Hombre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mujer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Cellphone__c</fullName>
        <label>Has Cellphone</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Data_Plan__c</fullName>
        <label>Has Data Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_Care_System__c</fullName>
        <description>Health care systems (current values are specific to Colombia)

Deprecated. Moved to Household</description>
        <label>Health Care System (Deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>Sisben</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepagada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Household_Head_Name__c</fullName>
        <label>Household Head Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Head__c</fullName>
        <label>Household Head</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image_Document_Id__c</fullName>
        <description>Store the Identifier of the document that represents an image for the Lac Farmer Detail</description>
        <label>Image Document Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF(ISBLANK( Contact__r.Picture_Attachment_Id__c) ||  ISNULL(Contact__r.Picture_Attachment_Id__c), &quot;&quot;,  IMAGE(Contact__r.Picture_Attachment_Id__c ,&quot;Profile Picture&quot;, 263, 223))


/*
IF(  ISBLANK(Image_Document_Id__c ) ||  ISNULL(Image_Document_Id__c), &quot;&quot;,  IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Image_Document_Id__c ,&quot;Profile Picture&quot;, 153, 143))
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infraestructura__c</fullName>
        <label>Infraestructura</label>
        <picklist>
            <picklistValues>
                <fullName>Bodega agroquímicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bodega cosecha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beneficio húmedo individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tratamiento de agua</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Infrastructure__c</fullName>
        <label>Infrastructure</label>
        <picklist>
            <picklistValues>
                <fullName>Agrochemical Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crop Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wet mill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Treatment</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LAC_Farmer_Id_Temp__c</fullName>
        <description>Deprecated: July 2013 - This field isn&apos;t needed since TaroWorks now supports related object mapping.</description>
        <label>LAC Farmer Id Temp</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAC_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAC Household</label>
        <referenceTo>LAC_Household__c</referenceTo>
        <relationshipLabel>LAC Farmer Details</relationshipLabel>
        <relationshipName>LAC_Farmer_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <formula>submision__r.gfsurveys__gps_y__c</formula>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link_To_Map__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ &apos;apex/LacFarmerDynamicMapPage?Id=&apos;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link To Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <formula>submision__r.gfsurveys__gps_x__c</formula>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Made_seedbed_in_the_last_year__c</fullName>
        <label>Made seedbed in the last year</label>
        <picklist>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The previous two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Map_Image__c</fullName>
        <formula>IF(NOT(ISBLANK( Map_Link__c )),IMAGE(Map_Link__c , &quot;&quot;, 300, 300),&quot;&quot;)</formula>
        <label>Map Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_Link__c</fullName>
        <formula>IF( NOT( ISNULL( Latitude__c )), &quot;http://maps.googleapis.com/maps/api/staticmap?center=&quot; &amp; TEXT( Latitude__c ) &amp; &quot;,&quot; &amp; TEXT(  Longitude__c  ) &amp; &quot;&amp;zoom=13&amp;size=300x300&amp;sensor=true&amp;markers=color:red%7Clabel:A%7C&quot;&amp; TEXT(Latitude__c) &amp; &quot;,&quot; &amp; TEXT( Longitude__c ), &quot;&quot;)</formula>
        <label>Map Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marginalized_Type__c</fullName>
        <description>Type of population in which a person might be classified

Deprecated. Moved to HH</description>
        <label>Marginalized Type (Deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>Desplazado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Persona con discapacidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mujer cabeza de hogar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adulto mayor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recibe subsidios gubernamentales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Miembros__c</fullName>
        <label>Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Income_from_Coffee__c</fullName>
        <formula>IF(  Quarterly_Income_from_Coffee__c == null, 0, ( Quarterly_Income_from_Coffee__c / 3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Income from Coffee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Income_from_Labour__c</fullName>
        <formula>IF( (Annual_Income_from__c  +  Annual_Income_From_Wages__c) &gt; 0, (Annual_Income_from__c  +  Annual_Income_From_Wages__c)/12 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Income from Labour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Income_from_other_Crops__c</fullName>
        <formula>IF( Quarterly_Income_from_other_Crops__c &gt; 0,  Quarterly_Income_from_other_Crops__c /3, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Income from other Crops</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Production__c</fullName>
        <formula>IF( Quarterly_Production__c  == NULL  ||  Quarterly_Production__c  &lt;= 0, 0,  Quarterly_Production__c/3 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Sales__c</fullName>
        <formula>IF( Quarterly_Sales__c  == null ||  Quarterly_Sales__c &lt;= 0, 0.0,  Quarterly_Sales__c/3 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <label>Municipality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_ID__c</fullName>
        <label>National ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Farms__c</fullName>
        <description>The number of farms owned by the farmer</description>
        <label>No of Farms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPI_Score__c</fullName>
        <label>PPI Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_Monthly_Income_from_Labour__c</fullName>
        <formula>IF( Monthly_Income_from_Labour__c &gt; 0 &amp;&amp;  Total_Monthly_Income__c &gt; 0, (Monthly_Income_from_Labour__c /Total_Monthly_Income__c ) * 100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Monthly Income from Labour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_Monthly_Income_of_Coffee__c</fullName>
        <formula>IF( Monthly_Income_from_Coffee__c &gt; 0 &amp;&amp; Total_Monthly_Income__c &gt; 0,  (Monthly_Income_from_Coffee__c /  Total_Monthly_Income__c) * 100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Monthly Income of Coffee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_Monthly_Income_of_other_Crops__c</fullName>
        <formula>IF( Monthly_Income_from_other_Crops__c &gt; 0 &amp;&amp;  Total_Monthly_Income__c &gt; 0, (Monthly_Income_from_other_Crops__c/Total_Monthly_Income__c) * 100  , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Monthly Income of other Crops</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Brand__c</fullName>
        <label>Phone Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Alcatel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alvo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackberry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huawei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sony Ericsson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Model__c</fullName>
        <label>Phone Model</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plagas__c</fullName>
        <label>Plagas</label>
        <picklist>
            <picklistValues>
                <fullName>Broca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palomilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arañita roja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguna</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plagues__c</fullName>
        <label>Plagues</label>
        <picklist>
            <picklistValues>
                <fullName>Broca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arañita roja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palomilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cochinilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>chinche de la chamusquina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babosas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nemátodos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Plagues_and_Disease_Control__c</fullName>
        <label>Plagues and Disease Control</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plantation_Age__c</fullName>
        <label>Plantation Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planted_Area__c</fullName>
        <label>Planted Area</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Podas__c</fullName>
        <label>Podas</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>